[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/Table.gd" type="Script" id=1]
[ext_resource path="res://sprites/bg.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/bg2.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://fontes/ROCK_KAPAK_2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fontes/montserrat.otf" type="DynamicFontData" id=6]
[ext_resource path="res://fontes/Acme.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://fontes/Candy_Pop!-demo-font.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/reset_icon.png" type="Texture" id=9]
[ext_resource path="res://sprites/exit_icon.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]

font/size = 19
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]

font/size = 21
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]

font/size = 33
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]

font/size = 25
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[node name="Table" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 9.1967, 4.86263 )
texture = ExtResource( 2 )

[node name="background2" type="Sprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 9.1967, 4.86263 )
texture = ExtResource( 3 )

[node name="Players" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -515.0
margin/top = -301.0
margin/right = -475.0
margin/bottom = -261.0
script/script = ExtResource( 4 )
player_labels = {  }

[node name="sair_btn" type="Button" parent="HUD"]

visibility/visible = false
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 19.0
margin/top = 566.0
margin/right = 119.0
margin/bottom = 597.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Terminar jogo"
flat = false

[node name="confirmar_sair" type="ConfirmationDialog" parent="HUD"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 379.0
margin/top = 271.0
margin/right = 674.0
margin/bottom = 358.0
popup/exclusive = false
window/title = "Abandonar jogo"
dialog/text = "Tem certeza que deseja abandonar o jogo\?"
dialog/hide_on_ok = true

[node name="vez" type="Label" parent="HUD"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 848.0
margin/top = 518.0
margin/right = 882.0
margin/bottom = 548.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vez:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vez_label" type="Label" parent="HUD/vez"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 0.0
margin/right = 156.0
margin/bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "nome jogador"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="passar_vez_btn" type="Button" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 902.0
margin/top = 552.0
margin/right = 1002.0
margin/bottom = 587.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Passar vez"
flat = false

[node name="score" type="HBoxContainer" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 9.0
margin/right = 1030.0
margin/bottom = 49.0
alignment = 0

[node name="nome_jogador_label" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 559.0
margin/right = 153.0
margin/bottom = 591.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "testando nome"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="log_label" type="Label" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 307.0
margin/top = 172.0
margin/right = 675.0
margin/bottom = 453.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="HUD"]

visibility/visible = false
transform/pos = Vector2( 523.635, 325.728 )
transform/scale = Vector2( 6.40626, 3.01433 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="HUD"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 186.0
margin/top = 199.0
margin/right = 856.0
margin/bottom = 440.0
custom_fonts/font = SubResource( 4 )
text = "jogador\nVenceu!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="reset_btn" type="Button" parent="HUD"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 434.0
margin/right = 504.0
margin/bottom = 481.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = false

[node name="exit_btn" type="Button" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 982.0
margin/top = 7.0
margin/right = 1022.0
margin/bottom = 43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = false

[node name="exit_btn2" type="Button" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 982.0
margin/top = 7.0
margin/right = 1022.0
margin/bottom = 43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = false

[node name="aviso_box" type="Panel" parent="HUD"]

visibility/visible = false
visibility/opacity = 0.82
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 183.0
margin/top = 148.0
margin/right = 831.0
margin/bottom = 482.0
__meta__ = { "_edit_group_":true }

[node name="instrucao_label" type="Label" parent="HUD"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 291.0
margin/top = 255.0
margin/right = 716.0
margin/bottom = 287.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Partida come√ßa com Acido / Hidreto"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="HUD/sair_btn" to="HUD" method="_on_sair_btn_pressed"]

[connection signal="pressed" from="HUD/passar_vez_btn" to="HUD" method="_on_passar_vez_btn_pressed"]

[connection signal="pressed" from="HUD/reset_btn" to="HUD" method="_on_reset_btn_pressed"]

[connection signal="pressed" from="HUD/exit_btn" to="HUD" method="_on_exit_btn_pressed"]


